<resources>
    <string name="app_name">WeatherCalendar</string>
    <string name="action_settings">Settings</string>

    <string name="test_country_code">us</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!--Preferences Strings -->
    <string name="pref_location_label">Location</string>
    <string name="pref_location_edittext_key">location_edittext</string>

    <string name="pref_use_current_location_key">use_current_location</string>
    <string name="pref_use_current_location_label">Use Current Location</string>

    <string name="pref_location_latitude_key">latitude</string>
    <string name="pref_location_longitude_key">longitude</string>

    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_label">Units</string>

    <string name="pref_sync_24">Every 24 Hours</string>
    <string name="pref_sync_12">Every 12 Hours</string>
    <string name="pref_sync_6">Every 6 Hours</string>
    <string name="pref_sync_3">Every 3 Hours</string>
    <string name="pref_sync_none">No Sync</string>
    <string name="pref_sync_label">Sync Weather</string>
    <string name="pref_sync_key">sync</string>


    <string name="year_bundle_key">year</string>
    <string name="month_bundle_key">month</string>
    <string name="day_bundle_key">day</string>
    <string name="hour_bundle_key">hour</string>
    <string name="minute_bundle_key">minute</string>
    <string name="forecast_bundle_key">forecast_chunks</string>
    <string name="calendar_bundle_key">calendar</string>
    <string name="fragment_bundle_key">fragment</string>

    <string name="event_extras_id_key">Event Id</string>
    <string name="event_extras_Start_Date_key">Start Date</string>
    <string name="event_extras_End_Date_key">End Date</string>
    <string name="event_extras_Title_key">Title</string>


    <string name="appwidget_text">Some Event Info</string>
    <string name="add_widget">Add widget</string>

    <string name="weather_icon_content_description">Weather Icon</string>
    <string name="show_forecast_indicator_content_description">Show Forecast Indicator</string>
    <string name="show_events_indicator_content_description">Show Events_Indicator</string>


    <string name="refresh_action_title">Refresh</string>
    <string name="new_event_description_hint">New Event Description</string>
    <string name="start_date_label">Start Date</string>
    <string name="start_time_label">Start Time</string>
    <string name="end_date_label">End Date</string>
    <string name="end_time_label">End Time</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>
    <string name="forecast_label">Forecast</string>
    <string name="no_forecast_message">No Forecast Available</string>
    <string name="events_label">Events</string>
    <string name="no_events_message">No Events Scheduled</string>

</resources>
